
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)
------------------------------------------------------------------
HEAD    (2004-04-08)
	
   *	enhanced schema support
	If you add more then one schema to your gedafe application, 
	the top of the Entry screen shows links into the other schemas 
	instead of table links. So you only need one cgi script.
	Addedd example/templates/header3.html
  *	persistency cleanup
	Make the code faster/work/work by using the fact that $g is 
	only loaded once, if you use the "speedy" perl interpreter
		Johannes

------------------------------------------------------------------
HEAD    (2004-03-31)

	* Added quicklinks

	   quicklinks are user-defined links put at the bottom of 
	   list views. See doc/gedafe-sql.pod

	* fixed an error in example/demo1.sql to make the editmask
	  example work.
		Johannes
------------------------------------------------------------------
HEAD    (2004-03-30)
	Javascript protection enabled on all tables.
	See gedafe-javascript.pod for details.
	------------
	Here are some more descriptions for people browsing
	through this file with a text search utility:
	script broken
	script error
	script missing
	script removed
------------------------------------------------------------------
HEAD    (2004-03-22)
	You can now supply a hand-crafted edit mask template

	This makes it possible to make edit masks more user friendly, 
	to use Java Script for input control, etc.
	A very ugly example "customer" template is supplied for the 
	"customer" table.
		Johannes
------------------------------------------------------------------
HEAD    (2004-03-19)
	You can move the Edit/Clone/Delete buttons in the list
	view to the left. Supply the new parameter edit_buttons_left
	and set it to 1 in the Start() function
		Johannes
------------------------------------------------------------------